@startuml

skinparam linetype ortho


title Mentory ER (Admin/Trust MVP, Must Have)

entity "users" as users {
  * id : uuid <<PK>>
  --
  role : text
  status : text
  email : text
}

entity "sessions (ref)" as sessions_ref {
  * id : uuid <<PK>>
  --
  status : text
}

entity "mentor_regalia" as mentor_regalia {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  file_url : text
  status : text
  reviewed_by : uuid <<FK>>
  reviewed_at : timestamptz
  created_at : timestamptz
}

entity "complaints" as complaints {
  * id : uuid <<PK>>
  --
  author_id : uuid <<FK>>
  target_user_id : uuid <<FK>>
  target_session_id : uuid <<FK>>
  assigned_admin_id : uuid <<FK>>
  category : text
  status : text
  resolution_comment : text
  created_at : timestamptz
  closed_at : timestamptz
}

entity "complaint_messages" as complaint_messages {
  * id : uuid <<PK>>
  --
  complaint_id : uuid <<FK>>
  sender_id : uuid <<FK>>
  body : text
  created_at : timestamptz
}

entity "moderation_actions" as moderation_actions {
  * id : uuid <<PK>>
  --
  admin_id : uuid <<FK>>
  target_type : text
  target_id : uuid
  action : text
  reason : text
  created_at : timestamptz
}

entity "user_blocks" as user_blocks {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  admin_id : uuid <<FK>>
  status : text
  reason : text
  created_at : timestamptz
}

entity "admin_audit_logs" as admin_audit_logs {
  * id : uuid <<PK>>
  --
  admin_id : uuid <<FK>>
  action : text
  target_type : text
  target_id : uuid
  created_at : timestamptz
}

' Layout anchors
users -[hidden]down- mentor_regalia
mentor_regalia -[hidden]down- complaints
complaints -[hidden]down- moderation_actions
moderation_actions -[hidden]down- admin_audit_logs

' Relationships
users ||--o{ mentor_regalia : uploads
users ||--o{ mentor_regalia : reviews

users ||--o{ complaints : creates
users ||--o{ complaints : targets
users ||--o{ complaints : assigned_to
sessions_ref ||--o{ complaints : related_session
complaints ||--o{ complaint_messages : thread
users ||--o{ complaint_messages : writes

users ||--o{ moderation_actions : performs
users ||--o{ user_blocks : blocked_user
users ||--o{ user_blocks : blocked_by
users ||--o{ admin_audit_logs : logs

@enduml
